[Web]: several tab panel fixes (paddings, close form button alignment, full screen button wrap)

--- a/web-client/src/main/java/lsfusion/gwt/public/static/css/MainFrame.css
+++ b/web-client/src/main/java/lsfusion/gwt/public/static/css/MainFrame.css
@@ -101,6 +101,10 @@ input[type=checkbox]:focus {
     width: 100%;
 }
 
+.formsTabBar .gwt-TabBarItem {
+    padding-right: 5px;
+}
+
 .tabLayoutPanelTabWidget {
     height: 100%;
 }
